<resources>
    <string name="app_name">气泡音乐</string>
    <string name="login">登录</string>
    <string name="login_by_email">网易邮箱登录</string>
    <string name="login_by_phone">手机号登录</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_email">请输入网易邮箱</string>
    <string name="err_email">邮箱格式错误</string>
    <string name="null_password">请输入密码</string>
    <string name="please_waiting">正在加载，请稍后……</string>
    <string name="privacy_and_agreement">同意《用户协议》《隐私政策》《儿童隐私政策》</string>

    <string name="unknown_err">未知错误，请稍后重试！</string>

    <string name="permission_explain">权限说明</string>

    <string name="storage_permission_explain">云音乐需要获取存储空间的权限，以保证歌曲正常播放下载</string>

    <string name="reject">拒绝</string>
    <string name="authorization">授权</string>

    <string name="my">我的</string>
    <string name="local_music">本地音乐</string>
    <string name="local_favorite">本地收藏</string>
    <string name="play_recent">最近播放</string>
    <string name="online_favorite">在线收藏</string>


    <string name="discover">发现</string>
    <string name="cloud">云村</string>
    <string name="video">视频</string>
    <string name="discovery_recommend_day">每日推荐</string>
    <string name="discovery_privacy_fm">私人FM</string>
    <string name="discovery_song_list">歌单</string>
    <string name="discovery_rank">排行榜</string>
    <string name="discovery_num_album">数字专辑</string>
    <string name="play_all_songs">播放全部</string>
</resources>