<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_common_white_soild_radius_15_background"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/permission_explain"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/contentTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTv"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="20dp"
        android:text="@string/storage_permission_explain"
        android:textColor="@color/alpha"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/contentTv"
        android:layout_marginVertical="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rejectTv"
            style="@style/DialogButton"
            android:background="@drawable/dialog_common_left_button_ackground"
            android:text="@string/reject"
            android:textColor="@color/app_main" />

        <TextView
            android:id="@+id/authorizationTv"
            style="@style/DialogButton"
            android:background="@drawable/dialog_common_right_button_ackground"
            android:text="@string/authorization"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>