<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/recommendRoot"
        style="@style/DiscoveryItemRoot">

        <FrameLayout
            style="@style/DiscoveryItemImgRoot"
            android:background="@drawable/discovery_second_recycler_item_background">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/discovery_calendar" />
            <TextView
                android:id="@+id/dayNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:layout_gravity="center"/>
        </FrameLayout>

        <TextView
            style="@style/DiscoveryItemTitle"
            android:text="@string/discovery_recommend_day" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fmRoot"
        style="@style/DiscoveryItemRoot">

        <LinearLayout
            style="@style/DiscoveryItemImgRoot"
            android:background="@drawable/discovery_second_recycler_item_background">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/discovery_radio" />
        </LinearLayout>

        <TextView
            style="@style/DiscoveryItemTitle"
            android:text="@string/discovery_privacy_fm" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/songListRoot"
        style="@style/DiscoveryItemRoot">

        <LinearLayout
            style="@style/DiscoveryItemImgRoot"
            android:background="@drawable/discovery_second_recycler_item_background">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/discovery_songlist" />
        </LinearLayout>

        <TextView
            style="@style/DiscoveryItemTitle"
            android:text="@string/discovery_song_list" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rankRoot"

        style="@style/DiscoveryItemRoot">

        <LinearLayout
            style="@style/DiscoveryItemImgRoot"
            android:background="@drawable/discovery_second_recycler_item_background">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/discovery_rank" />
        </LinearLayout>

        <TextView
            style="@style/DiscoveryItemTitle"
            android:text="@string/discovery_rank" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/albumRoot"
        style="@style/DiscoveryItemRoot">
        <LinearLayout
            style="@style/DiscoveryItemImgRoot"
            android:background="@drawable/discovery_second_recycler_item_background">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/discovery_num_album" />
        </LinearLayout>
        <TextView
            style="@style/DiscoveryItemTitle"
            android:text="@string/discovery_num_album" />
    </LinearLayout>


</LinearLayout>